--- a/components/text/template.phtml
+++ b/components/text/template.phtml
@@ -7,6 +7,6 @@
         placeholder="<?php echo $this->placeholder; ?>"
         size="<?php echo $this->size; ?>"
         <?php echo ($this->required ? 'aria-required="true"' : ''); ?>
-        <?php echo ($this->readonly ? 'disabled' : ''); ?>
+        <?php echo ($this->readonly ? 'readonly' : ''); ?>
         <?php echo ($this->disabled ? 'disabled' : ''); ?>/>
 </div>
