--- a/components/select/template.phtml
+++ b/components/select/template.phtml
@@ -1,6 +1,6 @@
 <div class="amarkal-ui-component amarkal-ui-component-select">
     <select name="<?php echo $this->name; ?>"
-            id="<?php echo $this->name; ?>"
+            id="<?php echo $this->id; ?>"
             <?php echo ($this->required ? 'aria-required="true"' : ''); ?>
             <?php echo ($this->readonly ? 'readonly' : ''); ?>
             <?php echo ($this->disabled ? 'disabled' : ''); ?>>
