--- a/components/text/template.phtml
+++ b/components/text/template.phtml
@@ -1,7 +1,7 @@
 <div class="amarkal-ui-component amarkal-ui-component-text">
     <input 
         type="text"
-        id="<?php echo $this->name; ?>"
+        id="<?php echo $this->id; ?>"
         name="<?php echo $this->name; ?>"
         value="<?php echo $this->value; ?>"
         placeholder="<?php echo $this->placeholder; ?>"
