--- a/components/number/template.phtml
+++ b/components/number/template.phtml
@@ -2,7 +2,7 @@
     <input 
         type="number"
         id="<?php echo $this->id; ?>"
-        name="<?php echo $this->name; ?>"
+        name="<?php echo $this->get_name(); ?>"
         value="<?php echo $this->value; ?>"
         size="<?php echo $this->size; ?>"
         min="<?php echo $this->min; ?>"
