--- a/components/select/template.phtml
+++ b/components/select/template.phtml
@@ -1,5 +1,5 @@
 <div class="amarkal-ui-component amarkal-ui-component-select">
-    <select name="<?php echo $this->name; ?>"
+    <select name="<?php echo $this->get_name(); ?>"
             id="<?php echo $this->id; ?>"
             <?php echo ($this->required ? 'aria-required="true"' : ''); ?>
             <?php echo ($this->readonly ? 'readonly' : ''); ?>
