--- a/components/text/template.phtml
+++ b/components/text/template.phtml
@@ -2,7 +2,7 @@
     <input 
         type="text"
         id="<?php echo $this->id; ?>"
-        name="<?php echo $this->name; ?>"
+        name="<?php echo $this->get_name(); ?>"
         value="<?php echo $this->value; ?>"
         placeholder="<?php echo $this->placeholder; ?>"
         size="<?php echo $this->size; ?>"
