--- a/components/textarea/template.phtml
+++ b/components/textarea/template.phtml
@@ -1,7 +1,7 @@
 <div class="amarkal-ui-component amarkal-ui-component-textarea">
     <textarea 
         id="<?php echo $this->id; ?>"
-        name="<?php echo $this->name; ?>"
+        name="<?php echo $this->get_name(); ?>"
         <?php echo ($this->required ? 'aria-required="true"' : ''); ?>
         <?php echo ($this->readonly ? 'readonly' : ''); ?>
         <?php echo ($this->disabled ? 'disabled' : ''); ?>><?php echo $this->value; ?></textarea>
