--- a/components/number/template.phtml
+++ b/components/number/template.phtml
@@ -1,4 +1,4 @@
-<div class="amarkal-ui-component amarkal-ui-component-number">
+<div <?php echo $this->component_attributes(); ?>>
     <input 
         type="number"
         id="<?php echo $this->id; ?>"
