--- a/components/radio/template.phtml
+++ b/components/radio/template.phtml
@@ -1,4 +1,4 @@
-<div class="amarkal-ui-component amarkal-ui-component-radio">
+<div <?php echo $this->component_attributes(); ?>>
     <?php foreach($this->data as $value => $label): ?>
         <label>
             <input type="radio" 
