--- a/components/text/template.phtml
+++ b/components/text/template.phtml
@@ -1,4 +1,4 @@
-<div class="amarkal-ui-component amarkal-ui-component-text">
+<div <?php echo $this->component_attributes(); ?>>
     <input 
         type="text"
         id="<?php echo $this->id; ?>"
