--- a/components/textarea/template.phtml
+++ b/components/textarea/template.phtml
@@ -1,4 +1,4 @@
-<div class="amarkal-ui-component amarkal-ui-component-textarea">
+<div <?php echo $this->component_attributes(); ?>>
     <textarea 
         id="<?php echo $this->id; ?>"
         name="<?php echo $this->get_name(); ?>"
