--- a/components/composite/template.phtml
+++ b/components/composite/template.phtml
@@ -1,3 +1,3 @@
-<div class="amarkal-ui-component amarkal-ui-component-composite">
+<div <?php echo $this->component_attributes(); ?>>
     <?php echo $this->parse_template(); ?>
 </div>
