Added component styles

--- a/assets/css/src/text.css
+++ b/assets/css/src/text.css
@@ -1,1 +1,1 @@
-.amarkal-ui-component-text input{border-radius:3px}
+.amarkal-ui-component-text.amarkal-ui-component-error input{border-color:red;background-color:#ffd8d8}.amarkal-ui-component-text input{border-radius:3px}
