--- a/assets/scss/textarea.scss
+++ b/assets/scss/textarea.scss
@@ -1,11 +1,12 @@
+@import 'mixins';
+
 .amarkal-ui-component-textarea {
     
     &.amarkal-ui-component-error textarea {
-        border-color: red;
-        background-color: #ffd8d8;
+        @include ui-input-error();
     }
     
     textarea {
-        border-radius: 3px;
+        @include ui-input();
     }
 }
