--- a/components/select/style.scss
+++ b/components/select/style.scss
@@ -1,7 +1,12 @@
+@import 'mixins';
+
 .amarkal-ui-component-select {
     
     &.amarkal-ui-component-error select {
-        border-color: red;
-        background-color: #ffd8d8;
+        @include ui-input-error();
+    }
+
+    select {
+        @include ui-input();
     }
 }
