Fixed an issue that was causing the switch component not to work with non-ajax form submission

--- a/assets/scss/switch.scss
+++ b/assets/scss/switch.scss
@@ -10,7 +10,7 @@ $knob-width: 26px;
         @include ui-input-error();
     }
     
-    input {
+    input[type="checkbox"] {
         display: none;
 
         &:checked + label {
