--- a/components/switch/template.phtml
+++ b/components/switch/template.phtml
@@ -1,8 +1,12 @@
 <input 
+    type="hidden"
+    name="<?php echo $this->get_name(); ?>"
+    value="<?php echo $this->value ?>"
+    <?php echo ($this->readonly ? 'readonly' : ''); ?>
+    <?php echo ($this->disabled ? 'disabled' : ''); ?>/>
+<input 
     type="checkbox"
     id="<?php echo $this->id; ?>"
-    name="<?php echo $this->get_name(); ?>"
-    <?php echo ($this->required ? 'aria-required="true"' : ''); ?>
     <?php echo ($this->readonly ? 'readonly' : ''); ?>
     <?php echo ($this->disabled ? 'disabled' : ''); ?>
     <?php echo ($this->value === 'on' ? 'checked' : ''); ?>/>
