--- a/components/code/template.phtml
+++ b/components/code/template.phtml
@@ -3,5 +3,5 @@
     name="<?php echo $this->get_name(); ?>"
     style="display:none"><?php echo $this->value; ?></textarea>
 <div class="amarkal-ui-component-ace-editor-wrapper">
-    <div class="amarkal-ui-component-ace-editor"><?php echo \htmlspecialchars($this->value); ?></div>
+    <div class="amarkal-ui-component-ace-editor"></div>
 </div>
