--- a/components/textarea/template.phtml
+++ b/components/textarea/template.phtml
@@ -1,6 +1,7 @@
 <textarea 
     id="<?php echo $this->id; ?>"
     name="<?php echo $this->get_name(); ?>"
+    rows="<?php echo $this->rows; ?>"
     <?php echo ($this->required ? 'aria-required="true"' : ''); ?>
     <?php echo ($this->readonly ? 'readonly' : ''); ?>
     <?php echo ($this->disabled ? 'disabled' : ''); ?>><?php echo $this->value; ?></textarea>
