--- a/components/checkbox/style.scss
+++ b/components/checkbox/style.scss
@@ -1,3 +1,16 @@
+@import 'variables';
+
 .amarkal-ui-component-checkbox {
-    
+    &.amarkal-ui-disabled {
+        label {
+            opacity: $disabled-component-opacity;
+            cursor: not-allowed;
+
+            input {
+                cursor: not-allowed;
+                opacity: 1;
+                background-color: $disabled-component-bg-color;
+            }
+        }
+    }
 }
