--- a/components/switch/style.scss
+++ b/components/switch/style.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import 'variables';
 
 $width: 58px;
 $height: 24px;
@@ -6,11 +7,20 @@ $knob-width: 26px;
 
 .amarkal-ui-component-switch {
     
+    &.amarkal-ui-disabled label {
+        opacity: $disabled-component-opacity;
+        background-color: $color-medium-gray !important;
+
+        .knob {
+            background-color: $disabled-component-bg-color;
+        }
+    }
+
     input[type="checkbox"] {
         display: none;
 
         &:checked + label {
-            background-color: #19ce8b;
+            background-color: $color-green;
 
             span {
                 transform: translateX($width - $knob-width - 4);
@@ -21,7 +31,7 @@ $knob-width: 26px;
     label {
         width: $width;
         height: $height;
-        background-color: #bdc0c3;
+        background-color: $color-medium-gray;
         border-radius: $height;
         box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.15);
         display: block;
