--- a/components/html/template.phtml
+++ b/components/html/template.phtml
@@ -1,1 +1,6 @@
-<?php echo $this->html; ?>
+<?php 
+if(false !== $this->model['template']) {
+    include($this->model['template']);
+}
+else echo $this->html;
+?>
